# internal/model/info.go
@@ -4,3 +4,7 @@ type AuthInfo struct {
 	Access  string `json:"Refresh"`
 	Refresh string `json:"Access"`
 }
+
+type ResponseMessage struct {
+	Message string `json:"message"`
+}
