# internal/transport/rest/order_handler.go
@@ -5,14 +5,17 @@ import (
 	"fmt"
 	"io"
 	"net/http"
+	"strconv"
 	"userService/internal/auth"
 	"userService/internal/model"
 	usercontroller "userService/internal/user_controller"
+
+	"github.com/go-chi/chi/v5"
 )
 
 type UpdateReuqest struct {
-	TaskId   int `json:"id"`
-	NewPrice int `json:"price"`
+	TaskId     int `json:"taskId"`
+	NewBalance int `json:"balance"`
 }
 
 func (h Handler) getAllTasks(w http.ResponseWriter, r *http.Request) {
@@ -26,10 +29,11 @@ func (h Handler) getAllTasks(w http.ResponseWriter, r *http.Request) {
 	b, err := json.Marshal(tasks)
 	if err != nil {
 		h.logger.Err.Printf("marshal error: %v\n", err.Error())
-		http.Error(w, fmt.Sprintf("message: %s", err.Error()), http.StatusBadRequest)
+		http.Error(w, "message: some server error", http.StatusInternalServerError)
 		return
 	}
 
+	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write(b)
 }
@@ -64,15 +68,52 @@ func (h Handler) updateTask(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	err = h.grpcCli.UpdatePriceOfTask(update.TaskId, update.NewPrice)
+	err = h.grpcCli.UpdatePriceOfTask(update.TaskId, update.NewBalance)
 	if err != nil {
 		h.logger.Err.Println(err.Error())
 		http.Error(w, fmt.Sprintf("message: %s", err.Error()), http.StatusBadRequest)
 		return
 	}
 
+	b, err = json.Marshal(model.ResponseMessage{Message: "success update"})
+	if err != nil {
+		h.logger.Err.Printf("marshal error: %v\n", err.Error())
+		http.Error(w, "message: some server error", http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("success update"))
+	w.Write(b)
+}
+
+func (h Handler) deleteTask(w http.ResponseWriter, r *http.Request) {
+	taskId := chi.URLParam(r, "taskId")
+
+	id, err := strconv.Atoi(taskId)
+	if err != nil {
+		h.logger.Err.Printf("can't parse tasks id %s: %v", taskId, err)
+		http.Error(w, "message: invalid taskId", http.StatusInternalServerError)
+		return
+	}
+
+	err = h.grpcCli.DeleteTask(id)
+	if err != nil {
+		h.logger.Err.Printf("can't delete task %d: %v", id, err)
+		http.Error(w, "message: can't delete task", http.StatusInternalServerError)
+		return
+	}
+
+	b, err := json.Marshal(model.ResponseMessage{Message: "success delete"})
+	if err != nil {
+		h.logger.Err.Printf("marshal error: %v\n", err.Error())
+		http.Error(w, "message: some server error", http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(b)
 }
 
 func (h Handler) createTask(w http.ResponseWriter, r *http.Request) {
@@ -80,7 +121,7 @@ func (h Handler) createTask(w http.ResponseWriter, r *http.Request) {
 
 	u, ok := r.Context().Value(UserRequest{}).(auth.UserClaims)
 	if !ok {
-		h.logger.Err.Println("cant get data from context")
+		h.logger.Err.Println("can't get data from context")
 		http.Error(w, "message: some server error", http.StatusInternalServerError)
 		return
 	}
@@ -112,6 +153,14 @@ func (h Handler) createTask(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	b, err = json.Marshal(model.ResponseMessage{Message: "success create"})
+	if err != nil {
+		h.logger.Err.Printf("marshal error: %v\n", err.Error())
+		http.Error(w, "message: some server error", http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("success create"))
+	w.Write(b)
 }
